--- a/install_ubuntu.org
+++ b/install_ubuntu.org
@@ -390,6 +390,15 @@ ready to be used!
 ** [NEW] Enabling ~remoteproc~ using a device-tree overlay
 
 
+#+BEGIN_SRC bash
+mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
+    dtc -O dtb -o remoteproc.dtbo remoteproc.dts && \
+    cat remoteproc.dtbo > /sys/kernel/config/device-tree/overlays/remoteproc/dtbo && \
+    modprobe --verbose zynqmp_r5_remoteproc && \
+    ls /sys/class/remoteproc/
+#+END_SRC
+
+
 #+BEGIN_SRC dts :tangle ./src/remoteproc.dts
 // SPDX-License-Identifier: GPL-3.0-or-later
 /*
@@ -406,172 +415,215 @@ ready to be used!
 		};
 	};
 
-	reserved-memory {
-		#address-cells = <0x02>;
-		#size-cells = <0x02>;
-		ranges;
-		rpu0vdev0vring0: rpu0vdev0vring0@3ed80000 {
-			no-map;
-			reg = <0x0 0x3ed80000 0x0 0x4000>;
-		};
-		rpu0vdev0vring1: rpu0vdev0vring1@3ed84000 {
-			no-map;
-			reg = <0x0 0x3ed84000 0x0 0x4000>;
-		};
-		rpu0vdev0buffer: rpu0vdev0buffer@3ed88000 {
-			no-map;
-			reg = <0x0 0x3ed88000 0x0 0x100000>;
-		};
-		rproc_0_reserved: rproc_0_reserved@3ec00000 {
-			no-map;
-			reg = <0x0 0x3ec00000 0x0 0x180000>;
-		};
+	fragment@1 {
+		target-path = "/";
+		__overlay__ {
+			reserved-memory {
+				rpu0vdev0vring0: rpu0vdev0vring0@3ed80000 {
+					phandle = <0x93>;
+					no-map;
+					reg = <0x0 0x3ed80000 0x0 0x4000>;
+				};
+				rpu0vdev0vring1: rpu0vdev0vring1@3ed84000 {
+					phandle = <0x94>;
+					no-map;
+					reg = <0x0 0x3ed84000 0x0 0x4000>;
+				};
+				rpu0vdev0buffer: rpu0vdev0buffer@3ed88000 {
+					phandle = <0x95>;
+					no-map;
+					reg = <0x0 0x3ed88000 0x0 0x100000>;
+				};
+				rproc_0_reserved: rproc_0_reserved@3ec00000 {
+					phandle = <0x96>;
+					no-map;
+					reg = <0x0 0x3ec00000 0x0 0x180000>;
+				};
 
-		rpu1vdev0vring0: rpu1vdev0vring0@3ef80000 {
-			no-map;
-			reg = <0x0 0x3ef80000 0x0 0x4000>;
-		};
-		rpu1vdev0vring1: rpu1vdev0vring1@3ef84000 {
-			no-map;
-			reg = <0x0 0x3ef84000 0x0 0x4000>;
-		};
-		rpu1vdev0buffer: rpu1vdev0buffer@3ef88000 {
-			no-map;
-			reg = <0x0 0x3ef88000 0x0 0x100000>;
-		};
-		rproc_1_reserved: rproc_1_reserved@3ef00000 {
-			no-map;
-			reg = <0x0 0x3ef00000 0x0 0x80000>;
-		};
-		uros_buf0: uros_buf@40000000 {
-			compatible = "shared-dma-pool";
-			reusable;
-			reg = <0x8 0x40000000 0x0 0x00400000>;
-			label = "uros_buf0";
-		};
-	};
-
-	tcm_0a: tcm_0a@ffe00000 {
-		no-map;
-		reg = <0x0 0xffe00000 0x0 0x10000>;
-		status = "okay";
-		compatible = "mmio-sram";
-		power-domain = <0x12 15>;
-	};
-	tcm_0b: tcm_0b@ffe20000 {
-		no-map;
-		reg = <0x0 0xffe20000 0x0 0x10000>;
-		status = "okay";
-		compatible = "mmio-sram";
-		power-domain = <0x12 16>;
-	};
-	tcm_1a: tcm_1a@ffe90000 {
-		no-map;
-		reg = <0x0 0xffe90000 0x0 0x10000>;
-		status = "okay";
-		compatible = "mmio-sram";
-		power-domain = <0x12 17>;
-	};
-	tcm_1b: tcm_1b@ffeb0000 {
-		no-map;
-		reg = <0x0 0xffeb0000 0x0 0x10000>;
-		status = "okay";
-		compatible = "mmio-sram";
-		power-domain = <0x12 18>;
-	};
-
-	rf5ss@ff9a0000 {
-		compatible = "xlnx,zynqmp-r5-remoteproc";
-		xlnx,cluster-mode = <1>;
-		ranges;
-		reg = <0x0 0xFF9A0000 0x0 0x15000>;
-		#address-cells = <0x2>;
-		#size-cells = <0x2>;
-		r5f_0 {
-			compatible = "xilinx,r5f";
-			#address-cells = <2>;
-			#size-cells = <2>;
-			ranges;
-			sram = <&tcm_0a &tcm_0b>;
-			memory-region = <&rproc_0_reserved>, <&rpu0vdev0buffer>, <&rpu0vdev0vring0>, <&rpu0vdev0vring1>;
-			power-domain = <0x12 7>;
-			mboxes = <&ipi_mailbox_rpu0 0>, <&ipi_mailbox_rpu0 1>;
-			mbox-names = "tx", "rx";
-		};
-		r5f_1 {
-			compatible = "xilinx,r5f";
-			#address-cells = <2>;
-			#size-cells = <2>;
-			ranges;
-			sram = <&tcm_1a &tcm_1b>;
-			memory-region = <&rproc_1_reserved>, <&rpu1vdev0buffer>, <&rpu1vdev0vring0>, <&rpu1vdev0vring1>;
-			power-domain = <0x12 8>;
-			mboxes = <&ipi_mailbox_rpu1 0>, <&ipi_mailbox_rpu1 1>;
-			mbox-names = "tx", "rx";
+				rpu1vdev0vring0: rpu1vdev0vring0@3ef80000 {
+					phandle = <0x97>;
+					no-map;
+					reg = <0x0 0x3ef80000 0x0 0x4000>;
+				};
+				rpu1vdev0vring1: rpu1vdev0vring1@3ef84000 {
+					phandle = <0x98>;
+					no-map;
+					reg = <0x0 0x3ef84000 0x0 0x4000>;
+				};
+				rpu1vdev0buffer: rpu1vdev0buffer@3ef88000 {
+					phandle = <0x99>;
+					no-map;
+					reg = <0x0 0x3ef88000 0x0 0x100000>;
+				};
+				rproc_1_reserved: rproc_1_reserved@3ef00000 {
+					phandle = <0xA0>;
+					no-map;
+					reg = <0x0 0x3ef00000 0x0 0x80000>;
+				};
+				uros_buf0: uros_buf@40000000 {
+					phandle = <0xA1>;
+					compatible = "shared-dma-pool";
+					reusable;
+					reg = <0x8 0x40000000 0x0 0x00400000>;
+					label = "uros_buf0";
+				};
+			};
 		};
 	};
 
-	zynqmp_ipi1 {
-		compatible = "xlnx,zynqmp-ipi-mailbox";
-		interrupt-parent = <0xf9010000>;
-		interrupts = <0 29 4>;
-		xlnx,ipi-id = <7>;
-		#address-cells = <1>;
-		#size-cells = <1>;
-		ranges;
-		/* APU<->RPU0 IPI mailbox controller */
-		ipi_mailbox_rpu0: mailbox@ff990000 {
-			reg = <0xff990600 0x20>,
-			      <0xff990620 0x20>,
-			      <0xff9900c0 0x20>,
-			      <0xff9900e0 0x20>;
-			reg-names = "local_request_region",
-				    "local_response_region",
-				    "remote_request_region",
-				    "remote_response_region";
-			#mbox-cells = <1>;
-			xlnx,ipi-id = <1>;
-		};
-	};
-	zynqmp_ipi2 {
-		compatible = "xlnx,zynqmp-ipi-mailbox";
-		interrupt-parent = <0xf9010000>;
-		interrupts = <0 30 4>;
-		xlnx,ipi-id = <8>;
-		#address-cells = <1>;
-		#size-cells = <1>;
-		ranges;
-		/* APU<->RPU0 IPI mailbox controller */
-		ipi_mailbox_rpu1: mailbox@ff3f0b00 {
-			reg = <0xff3f0b00 0x20>,
-			      <0xff3f0b20 0x20>,
-			      <0xff3f0940 0x20>,
-			      <0xff3f0960 0x20>;
-			reg-names = "local_request_region",
-				    "local_response_region",
-				    "remote_request_region",
-				    "remote_response_region";
-			#mbox-cells = <1>;
-			xlnx,ipi-id = <2>;
-		};
-	};
+	fragment@2 {
+		target-path = "/";
+		__overlay__ {
+			tcm_0a: tcm_0a@ffe00000 {
+				no-map;
+				reg = <0x0 0xffe00000 0x0 0x10000>;
+				status = "okay";
+				compatible = "mmio-sram";
+				power-domain = <&zynqmp_firmware 15>;
+			};
+			tcm_0b: tcm_0b@ffe20000 {
+				no-map;
+				reg = <0x0 0xffe20000 0x0 0x10000>;
+				status = "okay";
+				compatible = "mmio-sram";
+				power-domain = <&zynqmp_firmware 16>;
+			};
+			tcm_1a: tcm_1a@ffe90000 {
+				no-map;
+				reg = <0x0 0xffe90000 0x0 0x10000>;
+				status = "okay";
+				compatible = "mmio-sram";
+				power-domain = <&zynqmp_firmware 17>;
+			};
+			tcm_1b: tcm_1b@ffeb0000 {
+				no-map;
+				reg = <0x0 0xffeb0000 0x0 0x10000>;
+				status = "okay";
+				compatible = "mmio-sram";
+				power-domain = <&zynqmp_firmware 18>;
+			};
 
-	amba_pl: amba_pl@0 {
-		#address-cells = <2>;
-		#size-cells = <2>;
-		compatible = "simple-bus";
-		ranges ;
-		udmabuf@0x00 {
-			compatible  = "ikwzm,u-dma-buf";
-			device-name = "udmabuf0";
-			size = <0x0 0x00200000>;
-			memory-region = <&uros_buf0>;
-		};
-		udmabuf@0x01 {
-			compatible  = "ikwzm,u-dma-buf";
-			device-name = "udmabuf1";
-			size = <0x0 0x00200000>;
-			memory-region = <&uros_buf0>;
+			rf5ss@ff9a0000 {
+				compatible = "xlnx,zynqmp-r5-remoteproc";
+				xlnx,cluster-mode = <1>;
+				ranges;
+				reg = <0x0 0xFF9A0000 0x0 0x15000>;
+				#address-cells = <0x2>;
+				#size-cells = <0x2>;
+				r5f_0 {
+					compatible = "xilinx,r5f";
+					#address-cells = <2>;
+					#size-cells = <2>;
+					ranges;
+					sram = <&tcm_0a &tcm_0b>;
+					memory-region = <&rproc_0_reserved>, <&rpu0vdev0buffer>, <&rpu0vdev0vring0>, <&rpu0vdev0vring1>;
+					power-domain = <&zynqmp_firmware 7>;
+					mboxes = <&ipi_mailbox_rpu0 0>, <&ipi_mailbox_rpu0 1>;
+					mbox-names = "tx", "rx";
+				};
+				r5f_1 {
+					compatible = "xilinx,r5f";
+					#address-cells = <2>;
+					#size-cells = <2>;
+					ranges;
+					sram = <&tcm_1a &tcm_1b>;
+					memory-region = <&rproc_1_reserved>, <&rpu1vdev0buffer>, <&rpu1vdev0vring0>, <&rpu1vdev0vring1>;
+					power-domain = <&zynqmp_firmware 8>;
+					mboxes = <&ipi_mailbox_rpu1 0>, <&ipi_mailbox_rpu1 1>;
+					mbox-names = "tx", "rx";
+				};
+			};
+
+			zynqmp_ipi1 {
+				compatible = "xlnx,zynqmp-ipi-mailbox";
+				interrupt-parent = <&gic>;
+				interrupts = <0 29 4>;
+				xlnx,ipi-id = <7>;
+				#address-cells = <1>;
+				#size-cells = <1>;
+				ranges;
+				/* APU<->RPU0 IPI mailbox controller */
+				ipi_mailbox_rpu0: mailbox@ff990000 {
+					reg = <0xff990600 0x20>,
+					      <0xff990620 0x20>,
+					      <0xff9900c0 0x20>,
+					      <0xff9900e0 0x20>;
+					reg-names = "local_request_region",
+						    "local_response_region",
+						    "remote_request_region",
+						    "remote_response_region";
+					#mbox-cells = <1>;
+					xlnx,ipi-id = <1>;
+				};
+			};
+			zynqmp_ipi2 {
+				compatible = "xlnx,zynqmp-ipi-mailbox";
+				interrupt-parent = <&gic>;
+				interrupts = <0 30 4>;
+				xlnx,ipi-id = <8>;
+				#address-cells = <1>;
+				#size-cells = <1>;
+				ranges;
+				/* APU<->RPU0 IPI mailbox controller */
+				ipi_mailbox_rpu1: mailbox@ff3f0b00 {
+					reg = <0xff3f0b00 0x20>,
+					      <0xff3f0b20 0x20>,
+					      <0xff3f0940 0x20>,
+					      <0xff3f0960 0x20>;
+					reg-names = "local_request_region",
+						    "local_response_region",
+						    "remote_request_region",
+						    "remote_response_region";
+					#mbox-cells = <1>;
+					xlnx,ipi-id = <2>;
+				};
+			};
+
+			amba_pl: amba_pl@0 {
+				#address-cells = <2>;
+				#size-cells = <2>;
+				compatible = "simple-bus";
+				ranges ;
+				udmabuf@0x00 {
+					compatible  = "ikwzm,u-dma-buf";
+					device-name = "udmabuf0";
+					size = <0x0 0x00200000>;
+					memory-region = <&uros_buf0>;
+				};
+				udmabuf@0x01 {
+					compatible  = "ikwzm,u-dma-buf";
+					device-name = "udmabuf1";
+					size = <0x0 0x00200000>;
+					memory-region = <&uros_buf0>;
+				};
+			};
+
+			__symbols__ {
+				rpu0vdev0vring0 = "/reserved-memory/rpu0vdev0vring0@3ed80000 ";
+				rpu0vdev0vring1 = "/reserved-memory/rpu0vdev0vring1@3ed84000 ";
+				rpu0vdev0buffer = "/reserved-memory/rpu0vdev0buffer@3ed88000 ";
+				rproc_0_reserved = "/reserved-memory/rproc_0_reserved@3ec00000 ";
+				rpu1vdev0vring0 = "/reserved-memory/rpu1vdev0vring0@3ef80000 ";
+				rpu1vdev0vring1 = "/reserved-memory/rpu1vdev0vring1@3ef84000 ";
+				rpu1vdev0buffer = "/reserved-memory/rpu1vdev0buffer@3ef88000 ";
+				rproc_1_reserved = "/reserved-memory/rproc_1_reserved@3ef00000 ";
+				uros_buf0 = "/reserved-memory/uros_buf@40000000 ";
+				tcm_0a = "/tcm_0a@ffe00000 ";
+				tcm_0b = "/tcm_0b@ffe20000 ";
+				tcm_1a = "/tcm_1a@ffe90000 ";
+				tcm_1b = "/tcm_1b@ffeb0000 ";
+				rf5ss = "/rf5ss@ff9a0000 ";
+				r5f_0 = "/rf5ss/r5f_0 ";
+				r5f_1 = "/rf5ss/r5f_1 ";
+				zynqmp_ipi1 = "/zynqmp_ipi1 ";
+				ipi_mailbox_rpu1 = "/zynqmp_ipi1/mailbox@ff990000 ";
+				zynqmp_ipi2 = "/zynqmp_ipi2 ";
+				ipi_mailbox_rpu2 = "/zynqmp_ipi2/mailbox@ff3f0b00 ";
+				amba_pl = "/amba_pl ";
+				udmabuf_0 = "/amba_pl/udmabuf@0x00 ";
+				udmabuf_1 = "/amba_pl/udmabuf@0x01 ";
+			};
+
 		};
 	};
 };
