--- a/install_ubuntu.org
+++ b/install_ubuntu.org
@@ -390,7 +390,7 @@ ready to be used!
 ** [NEW] Enabling ~remoteproc~ using a device-tree overlay
 
 
-#+BEGIN_SRC bash
+#+BEGIN_SRC bash  :dir /sshx:kr260|sudo::/home/ubuntu :results silent
 mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
     dtc -O dtb -o remoteproc.dtbo remoteproc.dts && \
     cat remoteproc.dtbo > /sys/kernel/config/device-tree/overlays/remoteproc/dtbo && \
@@ -420,48 +420,39 @@ mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
 		__overlay__ {
 			reserved-memory {
 				rpu0vdev0vring0: rpu0vdev0vring0@3ed80000 {
-					phandle = <0x93>;
 					no-map;
 					reg = <0x0 0x3ed80000 0x0 0x4000>;
 				};
 				rpu0vdev0vring1: rpu0vdev0vring1@3ed84000 {
-					phandle = <0x94>;
 					no-map;
 					reg = <0x0 0x3ed84000 0x0 0x4000>;
 				};
 				rpu0vdev0buffer: rpu0vdev0buffer@3ed88000 {
-					phandle = <0x95>;
 					no-map;
 					reg = <0x0 0x3ed88000 0x0 0x100000>;
 				};
 				rproc_0_reserved: rproc_0_reserved@3ec00000 {
-					phandle = <0x96>;
 					no-map;
 					reg = <0x0 0x3ec00000 0x0 0x180000>;
 				};
 
 				rpu1vdev0vring0: rpu1vdev0vring0@3ef80000 {
-					phandle = <0x97>;
 					no-map;
 					reg = <0x0 0x3ef80000 0x0 0x4000>;
 				};
 				rpu1vdev0vring1: rpu1vdev0vring1@3ef84000 {
-					phandle = <0x98>;
 					no-map;
 					reg = <0x0 0x3ef84000 0x0 0x4000>;
 				};
 				rpu1vdev0buffer: rpu1vdev0buffer@3ef88000 {
-					phandle = <0x99>;
 					no-map;
 					reg = <0x0 0x3ef88000 0x0 0x100000>;
 				};
 				rproc_1_reserved: rproc_1_reserved@3ef00000 {
-					phandle = <0xA0>;
 					no-map;
 					reg = <0x0 0x3ef00000 0x0 0x80000>;
 				};
 				uros_buf0: uros_buf@40000000 {
-					phandle = <0xA1>;
 					compatible = "shared-dma-pool";
 					reusable;
 					reg = <0x8 0x40000000 0x0 0x00400000>;
@@ -479,28 +470,28 @@ mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
 				reg = <0x0 0xffe00000 0x0 0x10000>;
 				status = "okay";
 				compatible = "mmio-sram";
-				power-domain = <&zynqmp_firmware 15>;
+				power-domain = <0x12 15>;
 			};
 			tcm_0b: tcm_0b@ffe20000 {
 				no-map;
 				reg = <0x0 0xffe20000 0x0 0x10000>;
 				status = "okay";
 				compatible = "mmio-sram";
-				power-domain = <&zynqmp_firmware 16>;
+				power-domain = <0x12 16>;
 			};
 			tcm_1a: tcm_1a@ffe90000 {
 				no-map;
 				reg = <0x0 0xffe90000 0x0 0x10000>;
 				status = "okay";
 				compatible = "mmio-sram";
-				power-domain = <&zynqmp_firmware 17>;
+				power-domain = <0x12 17>;
 			};
 			tcm_1b: tcm_1b@ffeb0000 {
 				no-map;
 				reg = <0x0 0xffeb0000 0x0 0x10000>;
 				status = "okay";
 				compatible = "mmio-sram";
-				power-domain = <&zynqmp_firmware 18>;
+				power-domain = <0x12 18>;
 			};
 
 			rf5ss@ff9a0000 {
@@ -517,7 +508,7 @@ mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
 					ranges;
 					sram = <&tcm_0a &tcm_0b>;
 					memory-region = <&rproc_0_reserved>, <&rpu0vdev0buffer>, <&rpu0vdev0vring0>, <&rpu0vdev0vring1>;
-					power-domain = <&zynqmp_firmware 7>;
+					power-domain = <0x12 7>;
 					mboxes = <&ipi_mailbox_rpu0 0>, <&ipi_mailbox_rpu0 1>;
 					mbox-names = "tx", "rx";
 				};
@@ -528,7 +519,7 @@ mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
 					ranges;
 					sram = <&tcm_1a &tcm_1b>;
 					memory-region = <&rproc_1_reserved>, <&rpu1vdev0buffer>, <&rpu1vdev0vring0>, <&rpu1vdev0vring1>;
-					power-domain = <&zynqmp_firmware 8>;
+					power-domain = <0x12 8>;
 					mboxes = <&ipi_mailbox_rpu1 0>, <&ipi_mailbox_rpu1 1>;
 					mbox-names = "tx", "rx";
 				};
@@ -536,7 +527,7 @@ mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
 
 			zynqmp_ipi1 {
 				compatible = "xlnx,zynqmp-ipi-mailbox";
-				interrupt-parent = <&gic>;
+				interrupt-parent = <0x05>;
 				interrupts = <0 29 4>;
 				xlnx,ipi-id = <7>;
 				#address-cells = <1>;
@@ -558,7 +549,7 @@ mkdir /sys/kernel/config/device-tree/overlays/remoteproc && \
 			};
 			zynqmp_ipi2 {
 				compatible = "xlnx,zynqmp-ipi-mailbox";
-				interrupt-parent = <&gic>;
+				interrupt-parent = <0x05>;
 				interrupts = <0 30 4>;
 				xlnx,ipi-id = <8>;
 				#address-cells = <1>;
